namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-person-match-score-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-person-match-score-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation_in_court"
    cloud-platform.justice.gov.uk/application: "HMPPS Person Match Score"
    cloud-platform.justice.gov.uk/owner: "Probation In Court Team: probation-in-court-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-person-match-score"
    cloud-platform.justice.gov.uk/team-name: "probation-in-court"
